# iced-py-gui

./: .gitignore  Cargo.toml  README.md  generate_enum_stubs.py  info.txt  instructions.txt  pyproject.toml  python_test_cmds.txt
AI interface/: AI_interface.txt
crates/app-message/: Cargo.toml
crates/app-message/src/: lib.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: draw_canvas.rs  helpers.rs  import_export.rs  lib.rs  path_builds.rs
crates/divider/: Cargo.toml
crates/divider/src/: lib.rs
crates/iced-aw-widgets/: Cargo.toml
crates/iced-aw-widgets/src/: card.rs  lib.rs  menu_bar_overlay.rs
crates/ipg-alignment/: Cargo.toml
crates/ipg-alignment/src/: lib.rs
crates/ipg-callbacks/: Cargo.toml
crates/ipg-callbacks/src/: lib.rs
crates/ipg-canvas/: Cargo.toml
crates/ipg-canvas/src/: lib.rs
crates/ipg-canvas/src/canvas_items/: draw_canvas.rs  geometries.rs  helpers.rs  import_export.rs  mod.rs  path_builds.rs
crates/ipg-chart/: Cargo.toml
crates/ipg-chart/src/: lib.rs
crates/ipg-core/: Cargo.toml
crates/ipg-core/src/: lib.rs
crates/ipg-divider/: Cargo.toml
crates/ipg-events/: Cargo.toml
crates/ipg-events/src/: lib.rs
crates/ipg-helpers/: Cargo.toml
crates/ipg-helpers/src/: lib.rs
crates/ipg-styling/: Cargo.toml
crates/ipg-styling/src/: lib.rs
crates/ipg-table/: Cargo.toml
crates/ipg-table/src/: lib.rs
crates/ipg-types/: Cargo.toml
crates/ipg-types/src/: lib.rs
crates/ipg-widgets/: Cargo.toml  ipg_enums.rs  ipg_window.rs
crates/ipg-widgets/src/: ipg_button.rs  ipg_canvas.rs  ipg_card.rs  ipg_checkbox.rs  ipg_color_picker.rs  ipg_column.rs  ipg_container.rs  ipg_date_picker.rs  ipg_divider.rs  ipg_enums.rs  ipg_image.rs  ipg_menu.rs  ipg_modal.rs  ipg_mousearea.rs  ipg_opaque.rs  ipg_pane_grid.rs  ipg_pick_list.rs  ipg_progress_bar.rs  ipg_radio.rs  ipg_row.rs  ipg_rule.rs  ipg_scrollable.rs  ipg_selectable_text.rs  ipg_separator.rs  ipg_slider.rs  ipg_space.rs  ipg_stack.rs  ipg_svg.rs  ipg_table.rs  ipg_text.rs  ipg_text_input.rs  ipg_text_rich.rs  ipg_timer.rs  ipg_timer_canvas.rs  ipg_toggle.rs  ipg_tool_tip.rs  lib.rs
crates/ipg-window/: Cargo.toml
crates/ipg-window/src/: actions.rs  lib.rs
crates/table/: Cargo.toml
crates/table/src/: lib.rs  mouse_area.rs  mousearea_table.rs
float/: Cargo.toml
float/src/: main.rs
icedpygui/: __init__.py  __init__.pyi  icedpygui.pyi
interface_design/: ai_construct_gui.txt  auto_work.txt  py_solitaire_wip.py
ipg-fonts/: Cargo.toml
py utils/: make_enum_params.py  make_enums.py
py utils/make_enums/: main.py
python_examples/: defined_colors.py  demo.py  demo_readme_code.py  doc_helper.py  imports.py  py_arrows.py  py_button.py  py_button_add_new.py  py_button_new_palette.py  py_button_new_palette_old.py  py_button_palette.py  py_button_parameters.py  py_button_simple.py  py_button_styling.py  py_button_theme_palette.py  py_button_update.py  py_canvas.py  py_canvas_draw.py  py_card.py  py_chart.py  py_checkbox.py  py_checkbox_new_palette.py  py_checkbox_palette.py  py_checkbox_simple.py  py_checkbox_styling.py  py_clipboard.py  py_color.py  py_color_pick_design.py  py_color_picker.py  py_column.py  py_combo_box.py  py_combo_box_styling.py  py_combobox_theme_palette.py  py_container.py  py_container_styling.py  py_date_picker.py  py_divider.py  py_divider_combined.py  py_divider_hor.py  py_divider_horizontal.py  (+63 more)
python_examples/py_button/: py_button_add_new.py  py_button_new_palette.py  py_button_styling.py  py_button_text.txt  py_button_text2.txt  py_button_theme_palette.py
python_examples/py_checkbox/: py_checkbox_new_palette.py  py_checkbox_styling.py  py_checkbox_text.txt
python_examples/resources/: canvas.json.bak3  canvas.json.bakup
python_examples/resources/canvas_json/: canvas.json  canvas.json.bak1  canvas.json.bak2
python_examples/resources/jeopardy/: answers.json
python_examples/resources/table_data/: best-selling-books.csv
python_tests/: text.py
rust_testing/testing_iced_aw_cp/: Cargo.toml
rust_testing/testing_iced_aw_cp/src/: main.rs
rust_testing/testing_iced_float/: Cargo.toml
rust_testing/testing_iced_float/src/: main.rs
src/: app.rs  app_original.rs  app_temp.rs  lib.rs  lib_original.rs  state.rs
src/chart/: draw_chart.rs  path_builds.rs
src/graphics/: bootstrap_arrow.rs  bootstrap_icon.rs  colors.rs  mod.rs
src/graphics/bootstrap/: bootstrap.rs  bootstrap_arrow.rs  bootstrap_icon.rs  mod.rs
src/iced_aw_widgets/: mod.rs
src/ipg_widgets/: callbacks.rs  helpers.rs  ipg_button.rs  ipg_canvas.rs  ipg_chart.rs  ipg_checkbox.rs  ipg_column.rs  ipg_container.rs  ipg_date_picker.rs  ipg_events.rs  ipg_image.rs  ipg_menu.rs  ipg_mousearea.rs  ipg_opaque.rs  ipg_pick_list.rs  ipg_row.rs  ipg_rule.rs  ipg_scrollable.rs  ipg_separator.rs  ipg_stack.rs  ipg_table.rs  ipg_text_input.rs  ipg_timer.rs  ipg_timer_canvas.rs  ipg_toggle.rs  ipg_tool_tip.rs  ipg_window.rs  mod.rs
src/py_api/: button.rs  card.rs  checkbox.rs  clipboard.rs  color_picker.rs  colors.rs  column.rs  combo_box.rs  container.rs  date_picker.rs  divider.rs  draw.rs  draw_update.rs  event_window.rs  events.rs  float.rs  font.rs  grid.rs  helpers.rs  image.rs  ipg_button.rs  ipg_column.rs  ipg_container.rs  ipg_row.rs  ipg_window.rs  menu.rs  mod.rs  mouse_area.rs  mousearea.rs  opaque.rs  picklist.rs  progress_bar.rs  radio.rs  row.rs  rule.rs  sash.rs  scrollable.rs  selectable_text.rs  separator.rs  session.rs  (+15 more)
src/style/: styling.rs
src/widgets/: button.rs  callbacks.rs  colors.rs  column.rs  container.rs  divider.rs  enums.rs  ipg_button.rs  ipg_card.rs  ipg_checkbox.rs  ipg_color_picker.rs  ipg_column.rs  ipg_combo_box.rs  ipg_container.rs  ipg_date_picker.rs  ipg_divider.rs  ipg_draw.rs  ipg_events.rs  ipg_float.rs  ipg_font.rs  ipg_grid.rs  ipg_image.rs  ipg_menu.rs  ipg_mouse_area.rs  ipg_mousearea.rs  ipg_opaque.rs  ipg_pick_list.rs  ipg_progress_bar.rs  ipg_radio.rs  ipg_row.rs  ipg_rule.rs  ipg_sash.rs  ipg_scrollable.rs  ipg_selectable_text.rs  ipg_separator.rs  ipg_slider.rs  ipg_space.rs  ipg_splitter.rs  ipg_stack.rs  ipg_svg.rs  (+15 more)
(+46 files in other folders)
