[package]
authors = ["Charles Ray <ray-iced-projects@gmail.com>"]
name = "iced-py-gui"
version = "0.4.0"
edition = "2024"
license = "GNU"
description = "Python wrapper for Rust Iced"
readme = "README.md"

[lib]
name = "icedpygui"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
pyo3-stub-gen = "0.19.0"
iced = { version = "0.14", features = ["advanced", "canvas", "debug", "highlighter", "image", 
"lazy", "smol", "svg", "tokio"] }
iced_aw = { version = "0.13.0", features = ["full"] }

tokio = { version = "1.0", features = ["fs"]}
rfd = "0.13"
once_cell = "1.19.0"
chrono = "0.4.31"
unicode-segmentation = "1.9.0"
palette = "0.7.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
phf = { version = "0.11", default-features = false }
regex = "1.11.1"
resvg = "0.45.1"

[build-dependencies]
pyo3-build-config = { version = "0.26", features = ["resolve-config"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
