[package]
authors = ["Charles Ray <ray-iced-projects@gmail.com>"]
name = "iced-py-gui"
version = "0.4.0"
edition = "2024"
license = "GNU"
description = "Python wrapper for Rust Iced"
readme = "README.md"

[lib]
name = "icedpygui"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26" }
pyo3-stub-gen = "0.19.0"
iced = { path = "../iced_4255f61_04_25_2026", features = ["advanced", "canvas", "debug", "highlighter", "image", "lazy", "smol", "svg", "tokio"] }
tokio = { version = "1.0", features = ["fs"]}
rfd = "0.13"
once_cell = "1.19.0"
chrono = "0.4.44"
unicode-segmentation = "1.9.0"
palette = "0.7.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
phf = { version = "0.11", default-features = false }
regex = "1.11.1"
resvg = "0.45.1"

[features]
default = ["pyo3/extension-module"]

[build-dependencies]
pyo3-build-config = { version = "0.26", features = ["resolve-config"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3

[patch.crates-io]
iced          = { path = "../iced_4255f61_04_25_2026" }
iced_core     = { path = "../iced_4255f61_04_25_2026/core" }
iced_widget   = { path = "../iced_4255f61_04_25_2026/widget" }
iced_graphics = { path = "../iced_4255f61_04_25_2026/graphics" }
iced_renderer = { path = "../iced_4255f61_04_25_2026/renderer" }
iced_runtime  = { path = "../iced_4255f61_04_25_2026/runtime" }
iced_futures  = { path = "../iced_4255f61_04_25_2026/futures" }
