[package]
authors = ["Charles Ray <ray-iced-projects@gmail.com>"]
name = "iced-py-gui"
version = "0.4.0"
edition = "2024"
license = "GNU"
description = "Python wrapper for Rust Iced"
readme = "README.md"

[lib]
name = "icedpygui"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26" }
pyo3-stub-gen = "0.19.0"
iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["advanced", "canvas", "debug", "highlighter", "image", "lazy", "smol", "svg", "tokio"] }
tokio = { version = "1.0", features = ["fs"]}
iced_sash = { git = "https://github.com/ray-iced-projects/iced_sash.git", branch = "main" }
# iced_sash = {path = "/home/charles/Documents/ray-iced-projects/ray-5050-projects/iced_sash"}
csv = "1"
once_cell = "1.19.0"
chrono = "0.4.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
strum = { version = "0.28", features = ["derive"] }

[features]
default = ["pyo3/extension-module"]

[build-dependencies]
pyo3-build-config = { version = "0.26", features = ["resolve-config"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
