[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "iced-py-gui"
description = "Python wrapper for Rust Iced"
version = "0.4.0"
authors = [
    {name = 'Charles Ray', email = 'ray-iced-projects@gmail.com'}
]
readme = "README.md"
# PyO3 0.26 supports Python 3.14
requires-python = ">=3.10, < 3.15"
keywords = ["iced", "iced_aw", "gui", "rust", "python"]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/ray-iced-projects/iced-py-gui"
Issues = "https://github.com/ray-iced-projects/iced-py-gui/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
