[package]
name = "iced-aw-widgets"
version = "0.4.0"
edition = "2021"
license = "GNU"
description = "Chart implementation for IcedPyGui"

[dependencies]
# Internal dependencies
ipg-fonts = { workspace = true }
ipg-styling = { workspace = true }
# External dependencies
iced = { workspace = true }
iced_aw = {workspace = true }
