[package]
name = "ipg-canvas"
version = "0.4.0"
edition = "2024"
license = "GNU"
description = "Canvas implementation for IcedPyGui"

[dependencies]
# Internal dependencies
ipg-alignment = { workspace = true }
ipg-helpers = { workspace = true }
ipg-styling = { workspace = true }
ipg-types = { workspace = true }

# External dependencies
iced = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
