[package]
name = "ipg-types"
version = "0.4.0"
edition = "2024"
license = "GNU"
description = "Shared message types for IcedPyGui - no internal dependencies"

[dependencies]
# Only external dependencies - NO internal crates to avoid circular deps
iced = { workspace = true }
serde ={ workspace = true }
