[package]
name = "ipg-window"
version = "0.4.0"
edition = "2021"
license = "GNU"
description = "Window implementations for IcedPyGui"

[dependencies]
# Internal dependencies
ipg-helpers = { workspace = true }
ipg-styling = { workspace = true }
ipg-types = { workspace = true }
# External dependencies
iced = { workspace = true }
pyo3 = { workspace = true }
